--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "element-ui": "^2.13.1",
+    "jsqr": "^1.3.1",
     "node-sass": "^4.13.1",
     "sass-loader": "^8.0.2",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
+    "vue-qr": "^2.2.1",
     "vue-router": "^3.1.6",
     "vuex": "^3.1.3",
-    "vuex-persistedstate": "^3.0.1"
+    "vuex-persistedstate": "^3.0.1",
+    "webrtc-adapter": "^7.6.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
